--- a/docker-compose/all/all-vm.yml
+++ b/docker-compose/all/all-vm.yml
@@ -108,6 +108,9 @@ services:
     ports:
       - ${DOCKFLAREPORT:-5000}:5000
     environment:
+      - REDIS_URL=redis://redis:6379/0
+      - REDIS_DB_INDEX=0
+      - DOCKER_HOST=tcp://dockflare-socket-proxy:2375
       - USE_EXTERNAL_CLOUDFLARED=true
       - EXTERNAL_TUNNEL_ID={$CFTUNNELID}
       - TZ=${TZ:-Australia/Melbourne}
@@ -131,11 +134,6 @@ services:
       - dockflare.0.access.policy=default_tld
       - dockflare.0.zonename=$URLTLD
       #- cloudflare.tunnel.path=${URLPATH:-}
-    environment:
-      - REDIS_URL=redis://redis:6379/0
-      - REDIS_DB_INDEX=0  # Optional: specify Redis database index (0-15) for isolation from other containers
-      - DOCKER_HOST=tcp://docker-socket-proxy:2375
-      #- LOG_LEVEL=DEBUG # Uncomment for more verbose logging/debugging
     depends_on:
       dockflare-socket-proxy:
         condition: service_started
@@ -160,7 +158,7 @@ services:
   cf-tunnel:
     image: cloudflare/cloudflared:2025.11.1
     restart: unless-stopped
-    network:
+    networks:
       - dockflare
     environment:
       - TUNNEL_TOKEN=${CFTUNNELTOKEN}
