--- a/docker-compose/all/all-vm.yml
+++ b/docker-compose/all/all-vm.yml
@@ -109,6 +109,7 @@ services:
       - ${DOCKFLAREPORT:-5000}:5000
     environment:
       - CLOUDFLARED_NETWORK_NAME=dockflare
+      - CLOUDFLARED_CONTAINER_NAME=${CF_TUNNELNAME:-MissingHostname}
       - CLOUDFLARED_IMAGE=cloudflare/cloudflared:2025.11.1
       - REDIS_URL=redis://dockflare-db:6379/0
       - REDIS_DB_INDEX=0
