--- a/docker-compose/overseerr.yml
+++ b/docker-compose/overseerr.yml
@@ -18,12 +18,13 @@ services:
       start_period: 30s
     labels:
       - autoheal=true
-      - cloudflare.tunnel.enable=true
-      - cloudflare.tunnel.hostname=${SUBDOMAIN}.${DOMAIN}
-      - cloudflare.tunnel.service=http://${HOSTNAME:-localhost}:${WEBPORT:-5055}
-      - cloudflare.tunnel.access.policy=${CFPOLICY:-default_tld}
-      - cloudflare.tunnel.zonename=${DOMAIN}
-      - cloudflare.tunnel.path=${URLPATH:-}
+      - dockflare.0.access.enable=true
+      - dockflare.0.accesshostname=${SUBDOMAIN}${DOMAIN}
+      - dockflare.0.access.service=http://${HOSTNAME:-localhost}:${WEBPORT:-5055}
+      - dockflare.0.access.access.policy=${CFPOLICY:-authenticate}
+      - dockflare.0.access.name=${CFACCESSNAME:-Overseerr}
+      - dockflare.0.access.zonename=${DOMAIN}
+      - dockflare.0.access.path=${URLPATH:-}
     logging:
       driver: "json-file"
       options:
@@ -32,4 +33,5 @@ services:
 volumes:
   app:
   #www:
+
 
