🔄 synced local 'docker-compose/tdarr-serv.yml' with remote 'docker-compose/tdarr-serv.yml'

--- a/docker-compose/tdarr-serv.yml
+++ b/docker-compose/tdarr-serv.yml
@@ -108,7 +108,8 @@ services:
         window: 120s
       resources:
         limits:
-          cpus: ${CPULIMIT:-1}
+          cpus: ${CPULIMIT:-2}
+          memory: ${RAMLIMIT:-2G}
         reservations:
           devices:
           - driver: nvidia
