--- a/docker-compose/tdarr-serv.yml
+++ b/docker-compose/tdarr-serv.yml
@@ -8,7 +8,7 @@ services:
       - ${SERVER:-8266}:${SERVER:-8266} # server port
       - 8267:8267
     environment:
-      - TZ=Australia/Melbourne
+      - TZ=${TZ:-Australia/Melbourne}
       #- PUID=${PUID}
       #- PGID=${PGID}
       - UMASK_SET=002
@@ -17,7 +17,7 @@ services:
       - webUIPort=8265
       - internalNode=true
       - inContainer=true
-      - ffmpegVersion=6
+      - ffmpegVersion=${FFMPEGVER:-6}
       - nodeName=${SERVNAME:-Server}
       - NVIDIA_DRIVER_CAPABILITIES=all
       - NVIDIA_VISIBLE_DEVICES=all
@@ -67,7 +67,7 @@ services:
     restart: unless-stopped
     network_mode: service:server
     environment:
-      - TZ=Australia/Melbourne
+      - TZ=${TZ:-Australia/Melbourne}
       #- PUID=${PUID}
       #- PGID=${PGID}
       - UMASK_SET=002
@@ -75,7 +75,7 @@ services:
       - serverIP=0.0.0.0
       - serverPort=${SERVERPORT:-8266}
       - inContainer=true
-      - ffmpegVersion=6
+      - ffmpegVersion=${FFMPEGVER:-6}
       - NVIDIA_DRIVER_CAPABILITIES=all
       - NVIDIA_VISIBLE_DEVICES=all
     volumes:
@@ -85,8 +85,8 @@ services:
       - /cache:/temp
       - /etc/hostname:/etc/hostname:ro
     depends_on:
-          server:
-            condition: service_healthy
+      server:
+        condition: service_healthy
     healthcheck:
       test: ["CMD", "wget", "--no-verbose", "--tries=1", "--spider", "http://localhost:8265/"]
       interval: 1m
