🔄 synced local 'docker-compose/declutarr.yml' with remote 'docker-compose/declutarr.yml'

--- a/docker-compose/declutarr.yml
+++ b/docker-compose/declutarr.yml
@@ -32,6 +32,7 @@ services:
         [
         "Not a Custom Format upgrade for existing",
         "Not an upgrade for existing",
+        "Not a quality revision upgrade for existing",
         "Found matching series via grab history, but release was matched to series by ID. Automatic import is not possible. See the FAQ for details",
         "was not found in the grabbed release",
         "was unexpected considering the",
