🔄 synced local 'docker-compose/pelican.yml' with remote 'docker-compose/pelican.yml'

--- a/docker-compose/pelican.yml
+++ b/docker-compose/pelican.yml
@@ -289,10 +289,11 @@ services:
 
       
 volumes:
+  pelican-plugins:
   pelican-data:
+  pelican-logs:
   wings-data:
   wings-config:
-  pelican-logs:
   db:
   dockflare:
 
