--- a/docker-compose/pelican.yml
+++ b/docker-compose/pelican.yml
@@ -26,7 +26,7 @@ services:
     volumes:
       - pelican-data:/pelican-data
       - pelican-logs:/var/www/html/storage/logs
-      - pelican-plugins:/var/www/pelican/plugins
+      - /var/lib/pelican/plugins:/var/www/pelican/plugins
     environment:
       TZ: ${TZ:-UTC}
       APP_URL: https://${PANEL_SUBDOMAIN:-panel}.${DOMAIN}
@@ -289,7 +289,6 @@ services:
 
       
 volumes:
-  pelican-plugins:
   pelican-data:
   pelican-logs:
   wings-data:
