--- a/docker-compose/pelican.yml
+++ b/docker-compose/pelican.yml
@@ -72,7 +72,7 @@ services:
     labels:
       - dockflare.enable=true
       - dockflare.0.hostname=${PANEL_SUBDOMAIN:-panel}.${DOMAIN}
-      - dockflare.0.service=http://panel:80
+      - dockflare.0.service=http://${HOST:-localhost}:80
       - dockflare.0.access.policy=bypass
       - dockflare.0.zonename=${DOMAIN}
       - AutohealPelican=true
@@ -123,7 +123,7 @@ services:
     labels:
       - dockflare.enable=true
       - dockflare.0.hostname=${WINGS_SUBDOMAIN:-wings}.${DOMAIN}
-      - dockflare.0.service=http://wings:443
+      - dockflare.0.service=http://${HOST:-localhost}:443
       - dockflare.0.access.policy=bypass
       - dockflare.0.zonename=${DOMAIN}
       - AutohealPelican=true
