--- a/docker-compose/pelican.yml
+++ b/docker-compose/pelican.yml
@@ -59,6 +59,7 @@ services:
       MAIL_HOST: ${MAIL_SERVER:-smtp.gmail.com}
       MAIL_PORT: ${MAIL_PORT:-465}
       MAIL_FROM: ${MAIL_FROM}
+      MAIL_FROM_ADDRESS: ${MAIL_FROM}
       MAIL_FROM_NAME: ${MAIL_FROM_NAME:-Pelican}
       MAIL_USERNAME: ${MAIL_USERNAME}
       MAIL_PASSWORD: ${MAIL_PASSWORD}
