--- a/docker-compose/all/all-syno.yml
+++ b/docker-compose/all/all-syno.yml
@@ -86,6 +86,7 @@ services:
       - ${DOCKFLAREPORT:-5000}:5000
     environment:
       - TUNNEL_NAME=${HOSTNAME:-MissingHostname}
+      - LABEL_PREFIX=dfgeneric
       - CLOUDFLARED_NETWORK_NAME=host
       - CLOUDFLARED_IMAGE=cloudflare/cloudflared:2025.11.1
       - TZ=${TZ:-Australia/Melbourne}
