🔄 synced local 'docker-compose/omnitools.yml' with remote 'docker-compose/omnitools.yml'

--- a/docker-compose/omnitools.yml
+++ b/docker-compose/omnitools.yml
@@ -10,12 +10,12 @@ services:
         max-size: "10m"
         max-file: "3" 
     labels:
-      - dockflare.enable=${CFTUNNEL:-true}
-      - dockflare.0.hostname=${CFSUBDOMAIN}${CFDOMAIN}
-      - dockflare.0.service=http://${HOSTNAME:-localhost}:${WEBPORT:-8080}
-      - dockflare.0.access.policy=${CFPOLICY:-default_tld}
-      - dockflare.0.zonename=${CFDOMAIN}
-      - dockflare.0.path=${CFURLPATH:-}
+      - dfgeneric.enable=${CFTUNNEL:-true}
+      - dfgeneric.0.hostname=${CFSUBDOMAIN}${CFDOMAIN}
+      - dfgeneric.0.service=http://${HOSTNAME:-localhost}:${WEBPORT:-8080}
+      - dfgeneric.0.access.policy=${CFPOLICY:-default_tld}
+      - dfgeneric.0.zonename=${CFDOMAIN}
+      - dfgeneric.0.path=${CFURLPATH:-}
       - autoheal=true
     healthcheck:
       test: curl --connect-timeout 15 --silent --show-error --fail -k http://LOCALHOST:80
@@ -24,3 +24,4 @@ services:
       start_period: 30s
       timeout: 20s
       
+
