--- a/docker-compose/davinci-server.yml
+++ b/docker-compose/davinci-server.yml
@@ -25,12 +25,12 @@ services:
       timeout: 20s
     labels:
       - autoheal=true
-      - dockflare.enable=${CFTUNNEL:-true}
-      - dockflare.0.hostname=${CFSUBDOMAIN}${CFDOMAIN}
-      - dockflare.0.service=http://${HOSTNAME:-localhost}:${PORTWEB:-8543}
-      - dockflare.0.access.policy=${CFPOLICY:-default_tld}
-      - dockflare.0.zonename=${CFDOMAIN}
-      - dockflare.0.path=${CFURLPATH:-}
+      - dfgeneric.enable=${CFTUNNEL:-true}
+      - dfgeneric.0.hostname=${CFSUBDOMAIN}${CFDOMAIN}
+      - dfgeneric.0.service=http://${HOSTNAME:-localhost}:${PORTWEB:-8543}
+      - dfgeneric.0.access.policy=${CFPOLICY:-default_tld}
+      - dfgeneric.0.zonename=${CFDOMAIN}
+      - dfgeneric.0.path=${CFURLPATH:-}
     logging:
       driver: "json-file"
       options:
@@ -50,3 +50,4 @@ networks:
     cloudflare-net:
         name: cloudflare-net
         external: true
+
