--- a/docker-compose/tdarr-serv.yml
+++ b/docker-compose/tdarr-serv.yml
@@ -38,12 +38,12 @@ services:
       start_period: 60s
     labels:
       - autoheal=true
-      - dockflare.enable=${CFTUNNEL:-true}
-      - dockflare.0.hostname=${CFSUBDOMAIN}${CFDOMAIN}
-      - dockflare.0.service=http://${HOSTNAME:-localhost}:${WEBUI:-8265}
-      - dockflare.0.access.policy=${CFPOLICY:-default_tld}
-      - dockflare.0.zonename=${CFDOMAIN}
-      - dockflare.0.path=${CFURLPATH:-}
+      - dfgeneric.enable=${CFTUNNEL:-true}
+      - dfgeneric.0.hostname=${CFSUBDOMAIN}${CFDOMAIN}
+      - dfgeneric.0.service=http://${HOSTNAME:-localhost}:${WEBUI:-8265}
+      - dfgeneric.0.access.policy=${CFPOLICY:-default_tld}
+      - dfgeneric.0.zonename=${CFDOMAIN}
+      - dfgeneric.0.path=${CFURLPATH:-}
     logging:
       driver: "json-file"
       options:
@@ -124,3 +124,4 @@ volumes:
       type: "nfs"
       o: addr=$MEDIASERV,nfsvers=4
       device: $MEDIAPATH
+
