--- a/docker-compose/pelican.yml
+++ b/docker-compose/pelican.yml
@@ -72,11 +72,11 @@ services:
         max-size: "5m"
         max-file: "3"
     labels:
-      - dockflare.enable=true
-      - dockflare.0.hostname=${PANEL_SUBDOMAIN:-panel}.${DOMAIN}
-      - dockflare.0.service=http://${HOST:-localhost}:${PANEL_PORT:-80}
-      - dockflare.0.access.policy=bypass
-      - dockflare.0.zonename=${DOMAIN}
+      - dfgeneric.enable=true
+      - dfgeneric.0.hostname=${PANEL_SUBDOMAIN:-panel}.${DOMAIN}
+      - dfgeneric.0.service=http://${HOST:-localhost}:${PANEL_PORT:-80}
+      - dfgeneric.0.access.policy=bypass
+      - dfgeneric.0.zonename=${DOMAIN}
       - AutohealPelican=true
 
   wings:
@@ -123,11 +123,11 @@ services:
         max-size: "5m"
         max-file: "3"
     labels:
-      - dockflare.enable=true
-      - dockflare.0.hostname=${WINGS_SUBDOMAIN:-wings}.${DOMAIN}
-      - dockflare.0.service=http://${HOST:-localhost}:${WINGS_PORT:-443}
-      - dockflare.0.access.policy=bypass
-      - dockflare.0.zonename=${DOMAIN}
+      - dfgeneric.enable=true
+      - dfgeneric.0.hostname=${WINGS_SUBDOMAIN:-wings}.${DOMAIN}
+      - dfgeneric.0.service=http://${HOST:-localhost}:${WINGS_PORT:-443}
+      - dfgeneric.0.access.policy=bypass
+      - dfgeneric.0.zonename=${DOMAIN}
       - AutohealPelican=true
 
   database:
@@ -275,3 +275,4 @@ networks:
        config:
        - subnet: 192.168.254.0/24
          gateway: 192.168.254.1
+
