🔄 synced local 'docker-compose/kasm.yml' with remote 'docker-compose/kasm.yml'

--- a/docker-compose/kasm.yml
+++ b/docker-compose/kasm.yml
@@ -32,14 +32,14 @@ services:
       timeout: 15s
     labels:
       - autoheal=true
-      - dockflare.enable=${CFTUNNEL:-true}
-      - dockflare.0.hostname=${CFSUBDOMAIN}${CFDOMAIN}
-      - dockflare.0.service=https://${HOSTNAME:-localhost}:${PORT:-444}
-      - dockflare.0.access.policy=${CFPOLICY:-authenticate}
-      - dockflare.0.access.name=${CFACCESSNAME:-Kasm}
-      - dockflare.0.access.session_duration=${CFDURATION:-4h}
-      - dockflare.0.zonename=${CFDOMAIN}
-      - dockflare.0.no_tls_verify=true
+      - dfgeneric.enable=${CFTUNNEL:-true}
+      - dfgeneric.0.hostname=${CFSUBDOMAIN}${CFDOMAIN}
+      - dfgeneric.0.service=https://${HOSTNAME:-localhost}:${PORT:-444}
+      - dfgeneric.0.access.policy=${CFPOLICY:-authenticate}
+      - dfgeneric.0.access.name=${CFACCESSNAME:-Kasm}
+      - dfgeneric.0.access.session_duration=${CFDURATION:-4h}
+      - dfgeneric.0.zonename=${CFDOMAIN}
+      - dfgeneric.0.no_tls_verify=true
     logging:
       driver: "json-file"
       options:
@@ -54,3 +54,4 @@ networks:
     cloudflare-net:
         name: cloudflare-net
         external: true
+
