--- a/docker-compose/all/all-vm.yml
+++ b/docker-compose/all/all-vm.yml
@@ -104,11 +104,11 @@ services:
       - dockflare:/app/data
     labels:
       - autoheal=true
-      - dockflare.enable=true
-      - dockflare.0.hostname=${HOSTNAME:-MissingHostname}-dockflare.${URLTLD}
-      - dockflare.0.service=http://${HOSTNAME_FQDN:-localhost}:${DOCKLAREPORT:-5000}
-      - dockflare.0.access.policy=default_tld
-      - dockflare.0.zonename=${URLTLD}
+      - dfgeneric.enable=true
+      - dfgeneric.0.hostname=${HOSTNAME:-MissingHostname}-dockflare.${URLTLD}
+      - dfgeneric.0.service=http://${HOSTNAME_FQDN:-localhost}:${DOCKLAREPORT:-5000}
+      - dfgeneric.0.access.policy=default_tld
+      - dfgeneric.0.zonename=${URLTLD}
       #- dfgeneric.path=${URLPATH:-}
       
   portracker:
@@ -124,11 +124,11 @@ services:
       - PORT=${PORTACKERPORT:-4999}
     labels:
       - autoheal=true
-      - dockflare.enable=true
-      - dockflare.0.hostname=${HOSTNAME:-MissingHostname}-portracker.${URLTLD}
-      - dockflare.0.service=http://${HOSTNAME_FQDN:-localhost}:${PORTACKERPORT:-4999}
-      - dockflare.0.access.policy=default_tld
-      - dockflare.0.zonename=${URLTLD}
+      - dfgeneric.enable=true
+      - dfgeneric.0.hostname=${HOSTNAME:-MissingHostname}-portracker.${URLTLD}
+      - dfgeneric.0.service=http://${HOSTNAME_FQDN:-localhost}:${PORTACKERPORT:-4999}
+      - dfgeneric.0.access.policy=default_tld
+      - dfgeneric.0.zonename=${URLTLD}
       #- dfgeneric.path=${URLPATH:-}
 
 volumes:
