--- a/docker-compose/pelican.yml
+++ b/docker-compose/pelican.yml
@@ -226,10 +226,10 @@ services:
     labels:
       - AutohealPelican=true
       - dfpelican.enable=true
-      - dfpelican.0.hostname=dockflare.${domain}
+      - dfpelican.0.hostname=dockflare.${DOMAIN}
       - dfpelican.0.service=http://dockflare:${DOCKLAREPORT:-5000}
       - dfpelican.0.access.policy=default_tld
-      - dfpelican.0.zonename=${URLTLD}
+      - dfpelican.0.zonename=${DOMAIN}
       
   ddns-play:
     image: favonia/cloudflare-ddns:1.15.1
