🔄 synced local 'docker-compose/pelican.yml' with remote 'docker-compose/pelican.yml'

--- a/docker-compose/pelican.yml
+++ b/docker-compose/pelican.yml
@@ -279,7 +279,7 @@ services:
       - ADMINER_USERNAME=root
       - ADMINER_PASSWORD={MYSQL_ROOT_PASS}
     networks:
-      - pelican-mgmt
+      - Management
     labels:
       - AutohealPelican=true
       - dfpelican.enable=true
